# sdk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: monitor_orders.py  place_order.py  simple_bot.py
src/ordora_sdk/: __init__.py  abi.py  constants.py  contract.py  hasura.py  sdk.py  types.py
