[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordora-sdk"
version = "0.1.0"
description = "Python SDK for Ordora DEX — place orders, monitor status, and stream real-time market data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ordora", "dex", "blockchain", "bsc", "trading", "sdk"]
dependencies = [
    "web3>=6.15.0",
    "aiohttp>=3.9.0",
    "gql[aiohttp,websockets]>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
